--- a/buildspec.yml
+++ b/buildspec.yml
@@ -17,6 +17,7 @@ phases:
 
   build:
     commands:
+      - echo 'dckr_pat_KdmVj2VyGObjtG6RE-rvJqinXb0' | docker login -u jprianon  --password-stdin
       - echo Build started on `date`
       - echo Building the Docker image...      
       - docker build -t $IMAGE_REPO_NAME:$IMAGE_TAG .
