--- a/charts/helm-values/values-sock-shop.yaml
+++ b/charts/helm-values/values-sock-shop.yaml
@@ -1,4 +1,31 @@
 namespace: "sock-shop"
+
+serviceAccount:
+  create: true
+  name: "nginx-ingress-serviceaccount"
+
+global:
+    registry: ''
+
+
+istio:
+    enabled: false
+
+java:
+    options: -Xms64m -Xmx128m -XX:PermSize=32m -XX:MaxPermSize=64m -XX:+UseG1GC -Djava.security.egd=file:/dev/urandom
+
+cataloguedb:
+    image:
+        repo: weaveworksdemos/catalogue-db
+        tag: 0.3.0
+    resources:
+        limits:
+            cpu: 300m
+            memory: 1000Mi
+        requests:
+            cpu: 100m
+            memory: 300Mi
+
 catalogue:
     image:
         repo: weaveworksdemos/catalogue
@@ -11,3 +38,30 @@ catalogue:
         requests:
             cpu: 100m
             memory: 100Mi
+
+zipkin:
+    image:
+        repo: openzipkin/zipkin
+        tag: 2.21
+    resources:
+        limits:
+            cpu: 300m
+            memory: 1000Mi
+        requests:
+            cpu: 100m
+            memory: 300Mi
+    enabled:  false
+    url: zipkin.zipkin.svc.cluster.local
+
+carts:
+    image:
+        repo: 715841363614.dkr.ecr.eu-west-1.amazonaws.com/sock-shop-carts:latest
+        tag: 0.4.8
+    containerPort: 80
+    resources:
+        limits:
+            cpu: 300m
+            memory: 2000Mi
+        requests:
+            cpu: 300m
+            memory: 2000Mi
