--- a/charts/templates/catalogue-dep.yaml
+++ b/charts/templates/catalogue-dep.yaml
@@ -6,6 +6,10 @@ metadata:
   labels:
     name: catalogue
 spec:
+  strategy:
+    type: RollingUpdate
+    rollingUpdate:
+      maxUnavailable: 1
   replicas: 1
   selector:
     matchLabels:
