--- a/charts/helm-values/values-sock-shop.yaml
+++ b/charts/helm-values/values-sock-shop.yaml
@@ -29,7 +29,7 @@ cataloguedb:
 catalogue:
     image:
         repo: 715841363614.dkr.ecr.eu-west-1.amazonaws.com/sock-shop-catalogue:latest
-        tag: 0.3.5
+        #tag: 0.3.5
     containerPort: 80
     resources:
         limits:
