--- a/buildspec.yml
+++ b/buildspec.yml
@@ -1,6 +1,24 @@
 version: 0.2
+env:
+  variables:
+    REPO_SPECIFIC_PATH: "catalogue/"
 
 phases:
+  install:
+    commands:
+      - echo "Vérification des changements dans le répertoire :" $REPO_SPECIFIC_PATH
+      # Vérifie les fichiers modifiés dans la branche
+      - changes=$(git diff --name-only HEAD~1 HEAD)
+      - echo $changes
+      # Si les changements incluent des fichiers du répertoire spécifique, déclencher le webhook
+      - if [[ "$changes" == *"$REPO_SPECIFIC_PATH"* ]]; then
+          curl -X POST -H "Content-Type: application/json" \
+          -d '{"text":"Modifications détectées dans '"$REPO_SPECIFIC_PATH"'"}' \
+          https://your-webhook-url.com/trigger;
+        else
+          echo "Aucune modification dans le répertoire spécifique $REPO_SPECIFIC_PATH";
+        fi
+
   pre_build:
     commands:
       - echo Logging in to Amazon ECR...
