--- a/buildspec.yml
+++ b/buildspec.yml
@@ -7,7 +7,7 @@ phases:
   install:
     commands:
       - echo "Vérification des changements dans le répertoire :" $REPO_SPECIFIC_PATH
-      - git clone https://github.com/jprianon/sock-shop-catalogue.git .
+      #- git clone https://github.com/jprianon/sock-shop-catalogue.git .
       # Vérifie les fichiers modifiés dans la branche
       - git fetch --depth=2  # Récupère l'historique de deux commits pour pouvoir accéder à HEAD~1
       - git log --oneline 
