--- a/buildspec.yml
+++ b/buildspec.yml
@@ -9,6 +9,7 @@ phases:
       - echo "Vérification des changements dans le répertoire :" $REPO_SPECIFIC_PATH
       #- git clone https://github.com/jprianon/sock-shop-catalogue.git .
       # Vérifie les fichiers modifiés dans la branche
+      - git status
       - git fetch --depth=2  # Récupère l'historique de deux commits pour pouvoir accéder à HEAD~1
       - git log --oneline 
       - echo $changes
