--- a/buildspec.yml
+++ b/buildspec.yml
@@ -19,7 +19,7 @@ phases:
 
   pre_build:
     commands:
-      - script/check_changes.sh $REPO_SPECIFIC_PATH
+      - scripts/check_changes.sh $REPO_SPECIFIC_PATH
       - echo Logging in to Amazon ECR...
       - aws ecr get-login-password --region $AWS_DEFAULT_REGION | docker login --username AWS --password-stdin $AWS_ACCOUNT_ID.dkr.ecr.$AWS_DEFAULT_REGION.amazonaws.com
       - echo Installing dependencies...
