--- a/buildspec.yml
+++ b/buildspec.yml
@@ -20,7 +20,7 @@ phases:
 
   pre_build:
     commands:
-      - scripts/check_changes.sh $REPO_SPECIFIC_PATH
+      - scripts/check_changes.sh $REPO_SPECIFIC_PATH || exit 0
       - echo Logging in to Amazon ECR...
       - aws ecr get-login-password --region $AWS_DEFAULT_REGION | docker login --username AWS --password-stdin $AWS_ACCOUNT_ID.dkr.ecr.$AWS_DEFAULT_REGION.amazonaws.com
       - echo Installing dependencies...
