--- a/buildspec.yml
+++ b/buildspec.yml
@@ -7,7 +7,7 @@ phases:
   install:
     commands:
       - echo "Vérification des changements dans le répertoire :" $REPO_SPECIFIC_PATH
-      #- git clone https://github.com/jprianon/sock-shop-catalogue.git dd.dsqdqsdqsdqsdqsdq
+      #- git clone https://github.com/jprianon/sock-shop-catalogue.git dd.dsqdqsdqsdqsdqsdqdsqdqsdqsdqsd
       # Vérifie les fichiers modifiés dans la branche
       - echo "Démarrage du build..."
       - git clone https://github.com/jprianon/sock-shop-catalogue.git catalogue || echo "Le dépôt existe déjà, utilisation du dépôt cloné."
