--- a/buildspec.yml
+++ b/buildspec.yml
@@ -10,18 +10,17 @@ phases:
       #- git clone https://github.com/jprianon/sock-shop-catalogue.git dd.dsqdqsdqsdqsdqsdqdsqdqsdqsdqsd
       # Vérifie les fichiers modifiés dans la branche
       - echo "Démarrage du build..."
-      - git clone https://github.com/jprianon/sock-shop-catalogue.git catalogue || echo "Le dépôt existe déjà, utilisation du dépôt cloné."
+      - git clone https://github.com/jprianon/sock-shop-catalogue.git catalogue
       - cd catalogue
       - git fetch --depth=2
       - git status
       - git rev-parse --verify HEAD~1
-      - cd ../
-      - chmod +x scripts/check_changes.sh
+      - chmod +x ../scripts/check_changes.sh
 
 
   pre_build:
     commands:
-      - scripts/check_changes.sh $REPO_SPECIFIC_PATH || exit 1
+      - ../scripts/check_changes.sh $REPO_SPECIFIC_PATH || exit 1
       - echo Logging in to Amazon ECR...
       - aws ecr get-login-password --region $AWS_DEFAULT_REGION | docker login --username AWS --password-stdin $AWS_ACCOUNT_ID.dkr.ecr.$AWS_DEFAULT_REGION.amazonaws.com
       - echo Installing dependencies...
